<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/create_bg"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        layout="@layout/title" >
    </include>

    <include
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_height"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom" >
    </include>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_title"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/create_text"
            android:textSize="@dimen/create_text_size"
             />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/corner_bg"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/start_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textColor="@color/create_text"
            android:textSize="@dimen/create_text_size"
             />

        <EditText
            android:id="@+id/startTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_below="@id/start_title"
            android:background="@drawable/corner_bg"
            android:paddingLeft="5dp" />

        <ImageView
            android:id="@+id/start_time_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/startTime"
            android:layout_alignRight="@id/startTime"
            android:layout_alignTop="@id/startTime"
            android:layout_marginRight="0dp"
            android:background="@drawable/calendar" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/end_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_time_layout"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/end_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textColor="@color/create_text"
            android:textSize="@dimen/create_text_size"
             />

        <EditText
            android:id="@+id/endTime"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_below="@id/end_title"
            android:background="@drawable/corner_bg"
            android:paddingLeft="5dp" />

        <ImageView
            android:id="@+id/end_time_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/endTime"
            android:layout_alignRight="@id/endTime"
            android:layout_alignTop="@id/endTime"
            android:layout_marginRight="0dp"
            android:background="@drawable/calendar" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_time_layout"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:id="@+id/group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textColor="@color/create_text"
            android:textSize="@dimen/create_text_size"
             />

        <Spinner
            android:id="@+id/group_spinner"
            android:layout_width="150dp"
            android:layout_height="@dimen/edittext_height"
            android:layout_below="@id/group_title"
            android:background="@drawable/corner_bg"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/la_image"
            android:layout_width="@dimen/edittext_height"
            android:layout_height="@dimen/edittext_height"
            android:layout_alignRight="@id/group_spinner"
            android:layout_alignTop="@id/group_spinner"
            android:background="@drawable/list"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_down" />
    </RelativeLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/save_button"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/submit"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/submit"
        android:layout_below="@id/group_layout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/create_text"
            android:textSize="@dimen/create_text_size"
         />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_bg"
            android:gravity="top|left"
            android:padding="5dp"
            android:paddingLeft="5dp" />
    </LinearLayout>

</RelativeLayout>